# paulblish

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  spec.md
.github/workflows/: deploy.yml  test.yml
_site/: .pb-manifest.json  404.html  CNAME  feed.xml  index.html  robots.txt  sitemap.xml
_site/Articles/clientele-updates/: index.html
_site/all/: index.html
_site/articles/: index.html
_site/articles/agents-can-do-tedious-tasks/: index.html
_site/articles/clientele-updates/: index.html
_site/articles/gb-eng-cli/: index.html
_site/now/: index.html
_site/static/: style.css
_site/tools/: index.html
paulblish/: assets.py  cli.py  config.py  feed.py  linker.py  manifest.py  models.py  renderer.py  scanner.py  sitemap.py  templating.py  writer.py
paulblish/plugins/: callouts.py  embeds.py  highlights.py  wikilinks.py
templates/: 404.html  _nav.html  _social.html  all_pages.html  article.html  base.html  home.html  listing.html
templates/static/: style.css
tests/: test_assets.py  test_callouts.py  test_cli.py  test_code_blocks.py  test_config.py  test_copy_url_and_footer_links.py  test_embeds.py  test_favicon.py  test_feed.py  test_footnotes.py  test_highlights.py  test_html_embed.py  test_linker.py  test_manifest.py  test_mermaid.py  test_models.py  test_opengraph.py  test_renderer.py  test_scanner.py  test_sitemap.py  test_wikilinks.py  test_writer.py
tests/fixtures/: Home.md  air_fryer_converter.md  article_with_permalink.md  article_with_wikilinks.md  simple_article.md  site.toml
(+51 files in other folders)
